# dirac

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  bootstrap.sh  vcpkg.json
src/: anomaloid.h  components.h  main.cpp
src/utils/: layered_drawer.h  newtype.h  text.h  util.h  vectors.h
